Add subject controller, test and views
Style changes

--- a/app/views/layouts/_navigation.haml
+++ b/app/views/layouts/_navigation.haml
@@ -7,3 +7,7 @@
             %span.clear
               .span.block.m-t-xs
                 %strong.font-bold= current_user.email
+      %li
+        = link_to subjects_path do
+          %i.fa.fa-desktop
+          %span.nav-label Materii
