--- a/app/views/dashboard/index.haml
+++ b/app/views/dashboard/index.haml
@@ -1,1 +1,8 @@
-= react_component('app.MyTest')
+.wrapper.wrapper-content.animated.fadeInRight
+  .row
+    .col-lg-6
+      .ibox.float-e-margins
+        .ibox-content
+          = react_component 'app.FlexyTable',
+            tableStrategySlug: FlexyTable::StudentGroups.table_strategy_slug,
+            defaultColumns: FlexyTable::StudentGroups.default_columns
