Student grades table first version

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -6,6 +6,9 @@
 //
 // For example, to change the sidebar width:
 // $sidebar-width: 242px;
+/*
+*= require react-select/react-select.css
+*/
 
 // Active Admin's got SASS!
 @import "flattened_active_admin/variables";
