Student degree editable column

--- a/app/views/admin/student_groups/_grades_table.haml
+++ b/app/views/admin/student_groups/_grades_table.haml
@@ -1,3 +1,4 @@
 = react_component('app.GradesTable',
   tableStrategySlug: @table_strategy_slug,
-  defaultColumns: @default_columns)
+  defaultColumns: @default_columns,
+  studentGroupId: @student_group.id)
