--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -20,3 +20,18 @@
 // For example, to change the default status-tag color:
 //
 //   .status_tag { background: #6090DB; }
+
+.flexy-table-filter {
+  width: 20%;
+}
+
+.flexy-table {
+  .flexy-table-filter {
+    float: left;
+  }
+
+  .flexy-table.table {
+    float: right;
+    width: 78%;
+  }
+}
